--- a/it87.md
+++ b/it87.md
@@ -1,3 +1,5 @@
+This repo is copy of: https://gist.github.com/natanaeljr/37f1fd6f2712a3d902c9564ce094bbc9
+
 # lm-sensors support for it8688E chip (ArchLinux)
 
 0. Make sure you have installed `lm_sensors`
@@ -38,8 +40,6 @@ chip "it8688-*"
     label temp5 "VRM"
     label temp6 "Chipset"
 ~~~
-
-This is copy of: https://gist.github.com/natanaeljr/37f1fd6f2712a3d902c9564ce094bbc9
 
 References:  
 https://wiki.archlinux.org/index.php/lm_sensors  
