--- a/it87.md
+++ b/it87.md
@@ -1,31 +1,39 @@
 This repo is copy of: https://gist.github.com/natanaeljr/37f1fd6f2712a3d902c9564ce094bbc9
 
-# lm-sensors support for it8688E chip (ArchLinux)
+## lm-sensors support for it8688E chip (ArchLinux)
 
-0. Make sure you have installed `lm_sensors`
-  - sudo pacman -S lm_sensors --needed
+### 0. Make sure you have installed `lm_sensors`
+  ```bash
+  sudo pacman -S lm_sensors --needed
+  ```
 
-1. Download and Install the it87 kernel module for the driver support:
-  - git clone https://github.com/gamanakis/it87.git --branch=it8688E
-  - sudo make; sudo make install
+### 1. Download and Install the it87 kernel module for the driver support:
+  ```bash
+  git clone https://github.com/gamanakis/it87.git --branch=it8688E
+  ```
+  ```bash
+  sudo make; sudo make install
+  ```
 
-2. To temporary enable the it87 module
-  - sudo modprobe it87 force_id=0x8688 ignore_resource_conflict=1
+### 2. Enabling it87 module temporarily
+  ```bash
+  sudo modprobe it87 force_id=0x8688 ignore_resource_conflict=1
+  ```
 
-3. To permanentely enable the it87 module
-  - create /etc/modprobe.d/it87.conf with:
-~~~
-    options it87 ignore_resource_conflict=1 force_id=0x8688
-~~~
-  - create /etc/modules-load.d/it87.conf with:
-~~~
+### 3. Enabling it87 module permanentely
+  - create `/etc/modprobe.d/it87.conf` file with the content:
+```
+options it87 ignore_resource_conflict=1 force_id=0x8688
+```
+  - create `/etc/modules-load.d/it87.conf` file with the content:
+```
 it87
-~~~
+```
 
-4. Label the sensors
+### 4. Label the sensors
   - `sensors` will now show the voltage, temps, fans etc. but without readable labels, to fix that do the following:
-  - create /etc/sensors.d/gigabyte-a520m-h.conf with:
-~~~
+  - create `/etc/sensors.d/gigabyte-a520m-h.conf` with the content:
+```
 chip "it8688-*"
     label fan1 "CPU_FAN"
     label fan2 "SYS_FAN1"
@@ -39,7 +47,7 @@ chip "it8688-*"
     label temp4 "PCIe"
     label temp5 "VRM"
     label temp6 "Chipset"
-~~~
+```
 
 References:  
 https://wiki.archlinux.org/index.php/lm_sensors  
