--- a/it87.md
+++ b/it87.md
@@ -12,7 +12,7 @@ This repo is copy of: https://gist.github.com/natanaeljr/37f1fd6f2712a3d902c9564
   git clone https://github.com/gamanakis/it87.git --branch=it8688E
   ```
   ```bash
-  sudo make; sudo make install
+  cd it87; sudo make; sudo make install
   ```
 
 ### 2. Enabling it87 module temporarily
