--- a/it87.md
+++ b/it87.md
@@ -17,13 +17,13 @@ This repo is copy of: https://gist.github.com/natanaeljr/37f1fd6f2712a3d902c9564
 
 ### 2. Enabling it87 module temporarily
   ```bash
-  sudo modprobe it87 force_id=0x8688 ignore_resource_conflict=1
+  sudo modprobe it87 ignore_resource_conflict=1 force_id=0x8622
   ```
 
 ### 3. Enabling it87 module permanentely
   - create `/etc/modprobe.d/it87.conf` file with the content:
 ```
-options it87 ignore_resource_conflict=1 force_id=0x8688
+options it87 ignore_resource_conflict=1 force_id=0x8622
 ```
   - create `/etc/modules-load.d/it87.conf` file with the content:
 ```
@@ -32,21 +32,18 @@ it87
 
 ### 4. Label the sensors
   - `sensors` will now show the voltage, temps, fans etc. but without readable labels, to fix that do the following:
-  - create `/etc/sensors.d/gigabyte-a520m-h.conf` with the content:
+  - create `/etc/sensors.d/gigabyte-x570-l.conf` with the content:
 ```
-chip "it8688-*"
+chip "it8622-*"
     label fan1 "CPU_FAN"
-    label fan2 "SYS_FAN1"
-    label fan3 "SYS_FAN2"
-    label fan4 "Chipset fan"
-    label fan5 "CPU_OPT"
+    label fan1 "GPU_FAN"
+    label fan2 "SSD_FAN"
+    label fan3 "SYS_FANS"
 
-    label temp1 "SYS1 (rear)"
-    label temp2 "SYS2 (front)"
-    label temp3 "CPU"
-    label temp4 "PCIe"
-    label temp5 "VRM"
-    label temp6 "Chipset"
+    label mem "GPU"
+    label Tctl "CPU"
+    label Sensor 1 "Samsung SSD"
+    label Sensor 2 "Repo SSD"
 ```
 
 References:  
