--- a/it87.md
+++ b/it87.md
@@ -36,14 +36,14 @@ it87
 ```
 chip "it8622-*"
     label fan1 "CPU_FAN"
-    label fan1 "GPU_FAN"
-    label fan2 "SSD_FAN"
-    label fan3 "SYS_FANS"
+    label fan1 "GPU_FAN"    
+    label fan2 "SYS_FANS"
+    label fan3 "SSD_FAN"
 
-    label mem "GPU"
-    label Tctl "CPU"
-    label Sensor 1 "Samsung SSD"
-    label Sensor 2 "Repo SSD"
+    label mem "GPU" # Not working
+    label Tctl "CPU" # Not working
+    label Sensor 1 "Samsung SSD" # Not working
+    label Sensor 2 "Repo SSD" # Not working
 ```
 
 References:  
